tests/neg/i22357.scala
@([A] =>> Int) // error
def i = 1
