tests/neg/i22357.check
-- Error: tests/neg/i22357.scala:1:0 -----------------------------------------------------------------------------------
1 |@([A] =>> Int) // error
  |^^^^^^^^^^^^^^
  |[A] =>> Int does not have a constructor
